--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-reveal": "^1.2.2",
+    "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "sharp": "^0.30.7"
