--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.17.2",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
-    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-plugin-sitemap": "^5.17.0",
     "gatsby-source-filesystem": "^4.17.0",
-    "gatsby-transformer-sharp": "^4.17.0",
+    "gatsby-transformer-sharp": "^4.18.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
     "react-reveal": "^1.2.2",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
