--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "react-icons": "^4.4.0",
     "react-reveal": "^1.2.2",
     "react-share": "^4.4.0",
-    "react-slick": "^0.28.1",
-    "sharp": "^0.30.7"
+    "react-slick": "^0.29.0",
+    "sharp": "^0.30.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
