--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
     "react-reveal": "^1.2.2",
     "react-share": "^4.4.0",
     "react-slick": "^0.29.0",
