--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^4.17.2",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.17.0",
+    "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-plugin-sitemap": "^5.17.0",
