--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.17.2",
     "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-google-tagmanager": "^4.24.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-react-helmet": "^5.17.0",
